--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,90 +1,96 @@
 .home {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 50px;
-    max-width: 1200px;
-    margin: auto;
-    margin-top: 80px;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px;
+  max-width: 1200px;
+  margin: auto;
+  margin-top: 80px;
+  flex-wrap: wrap;
+}
+
+.home-content {
+  flex: 1;
+  padding-right: 20px;
+}
+
+.home-content h1 {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+}
+
+.home-content p {
+  font-size: 1.2rem;
+  color: white;
+}
+
+.home-image-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  position: relative;
+  max-width: 350px;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 1; 
+}
+
+.home-image-bg {
+  position: absolute;
+  width: 100%;
+  height: 70%;
+  background-color: #f0c508;
+  border-radius: 10px;
+  bottom: 0;
+  z-index: -1;
+}
+
+.home-image {
+  max-width: 90%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  border-radius: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+  
+.home-image:hover {
+  transform: scale(1.05);
+}
+
+@media (max-width: 768px) {
+  .home {
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
   }
-  
-  
+
   .home-content {
-    flex: 1;
-    padding-right: 20px;
+    padding-right: 0;
+    margin-bottom: 20px;
   }
-  
+
   .home-content h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
+    font-size: 2rem;
   }
-  
+
   .home-content p {
-    font-size: 1.2rem;
-    color: white;
+    font-size: 1rem;
   }
-  
-  
+
   .home-image-container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    max-width: 350px;
+    max-width: 250px;
+    aspect-ratio: auto; 
   }
-  
-  
+
   .home-image-bg {
-    position: absolute;
-    width: 100%;
-    height: 70%;
-    background-color: #f0c508;
-    border-radius: 10px;
-    bottom: 0;
-    z-index: -1;
+    height: 50%;
   }
-  
-  
+
   .home-image {
-    width: 100%;
+    max-width: 100%;
     height: auto;
-    border-radius: 10px;
-    transition: transform 0.3s ease-in-out;
   }
-  
-  .home-image:hover {
-    transform: scale(1.05);
-  }
-  
-  
-  
-  @media (max-width: 768px) {
-    .home {
-      flex-direction: column;
-      text-align: center;
-      padding: 30px;
-    }
-  
-    .home-content {
-      padding-right: 0;
-      margin-bottom: 20px;
-    }
-  
-    .home-content h1 {
-      font-size: 2rem;
-    }
-  
-    .home-content p {
-      font-size: 1rem;
-    }
-  
-    .home-image-container {
-      max-width: 250px;
-    }
-  
-    .home-image-bg {
-      height: 50%;
-    }
-  }
+}
