Updated: Added Basic Skills Section in Skills.jsx

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -40,7 +40,7 @@
   position: absolute;
   width: 100%;
   height: 70%;
-  background-color: #f0c508;
+  background-color: #3AAFA9;
   border-radius: 10px;
   bottom: 0;
   z-index: -1;
