--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -22,7 +22,7 @@
   
   
   .project-box {
-    background: #ccf143;
+    background: #17e980;
     padding: 20px;
     border-radius: 12px;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
